exports[`invalid(1): {\"exports\": {\"./foo/\": \"./dist/foo/\"}} 1`] = `

[Input]
  1 | {"exports": {"./foo/": "./dist/foo/"}}

`;

exports[`invalid(1): {\"exports\": {\"./foo/\": \"./dist/foo/\"}} 2`] = `

Message:
> 1 | {"exports": {"./foo/": "./dist/foo/"}}
    |              ^^^^^^^^ Trailing-slash folder mapping \`./foo/\` in \`exports\` is deprecated; use a subpath pattern like \`./foo/*\` instead.

Output:
  1 | {"exports": {"./foo/*": "./dist/foo/"}}

`;

exports[`invalid(1): {\"exports\": {\"./foo/\": \"./dist/foo/\"}} 3`] = `

Message:
> 1 | {"exports": {"./foo/": "./dist/foo/"}}
    |                        ^^^^^^^^^^^^^ Trailing-slash folder mapping \`./dist/foo/\` in \`exports\` is deprecated; use a subpath pattern like \`./dist/foo/*\` instead.

Output:
  1 | {"exports": {"./foo/": "./dist/foo/*"}}

`;

exports[`invalid(2): {\"exports\": {\"./foo/\": \"./dist/*/\"}} 1`] = `

[Input]
  1 | {"exports": {"./foo/": "./dist/*/"}}

`;

exports[`invalid(2): {\"exports\": {\"./foo/\": \"./dist/*/\"}} 2`] = `

Message:
> 1 | {"exports": {"./foo/": "./dist/*/"}}
    |              ^^^^^^^^ Trailing-slash folder mapping \`./foo/\` in \`exports\` is deprecated; use a subpath pattern like \`./foo/*\` instead.

`;

exports[`invalid(2): {\"exports\": {\"./foo/\": \"./dist/*/\"}} 3`] = `

Message:
> 1 | {"exports": {"./foo/": "./dist/*/"}}
    |                        ^^^^^^^^^^^ Trailing-slash folder mapping \`./dist/*/\` in \`exports\` is deprecated; use a subpath pattern like \`./dist/*/*\` instead.

`;

exports[`invalid(3): {\"exports\": {\".\": \"./lib/\"}} 1`] = `

[Input]
  1 | {"exports": {".": "./lib/"}}

`;

exports[`invalid(3): {\"exports\": {\".\": \"./lib/\"}} 2`] = `

Message:
> 1 | {"exports": {".": "./lib/"}}
    |                   ^^^^^^^^ Trailing-slash folder mapping \`./lib/\` in \`exports\` is deprecated; use a subpath pattern like \`./lib/*\` instead.

`;

exports[`invalid(4): {\n\t\t\t\"exports\": {\n\t\t\t\t\".\": {\n\t\t\t\t\t\"import\": \"./dist/\"\n\t\t\t\t}\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"exports": {
  3 | 				".": {
  4 | 					"import": "./dist/"
  5 | 				}
  6 | 			}
  7 | 		}

`;

exports[`invalid(4): {\n\t\t\t\"exports\": {\n\t\t\t\t\".\": {\n\t\t\t\t\t\"import\": \"./dist/\"\n\t\t\t\t}\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"exports": {
  3 | 				".": {
> 4 | 					"import": "./dist/"
    | 					          ^^^^^^^^^ Trailing-slash folder mapping \`./dist/\` in \`exports\` is deprecated; use a subpath pattern like \`./dist/*\` instead.
  5 | 				}
  6 | 			}
  7 | 		}

`;

exports[`invalid(5): {\"imports\": {\"#internal/\": \"./src/internal/\"}} 1`] = `

[Input]
  1 | {"imports": {"#internal/": "./src/internal/"}}

`;

exports[`invalid(5): {\"imports\": {\"#internal/\": \"./src/internal/\"}} 2`] = `

Message:
> 1 | {"imports": {"#internal/": "./src/internal/"}}
    |              ^^^^^^^^^^^^ Trailing-slash folder mapping \`#internal/\` in \`imports\` is deprecated; use a subpath pattern like \`#internal/*\` instead.

Output:
  1 | {"imports": {"#internal/*": "./src/internal/"}}

`;

exports[`invalid(5): {\"imports\": {\"#internal/\": \"./src/internal/\"}} 3`] = `

Message:
> 1 | {"imports": {"#internal/": "./src/internal/"}}
    |                            ^^^^^^^^^^^^^^^^^ Trailing-slash folder mapping \`./src/internal/\` in \`imports\` is deprecated; use a subpath pattern like \`./src/internal/*\` instead.

Output:
  1 | {"imports": {"#internal/": "./src/internal/*"}}

`;

exports[`invalid(6): {\"exports\": \"./dist/\"} 1`] = `

[Input]
  1 | {"exports": "./dist/"}

`;

exports[`invalid(6): {\"exports\": \"./dist/\"} 2`] = `

Message:
> 1 | {"exports": "./dist/"}
    |             ^^^^^^^^^ Trailing-slash folder mapping \`./dist/\` in \`exports\` is deprecated; use a subpath pattern like \`./dist/*\` instead.

`;

exports[`invalid(7): {\"imports\": {\"#dep\": \"./src/\"}} 1`] = `

[Input]
  1 | {"imports": {"#dep": "./src/"}}

`;

exports[`invalid(7): {\"imports\": {\"#dep\": \"./src/\"}} 2`] = `

Message:
> 1 | {"imports": {"#dep": "./src/"}}
    |                      ^^^^^^^^ Trailing-slash folder mapping \`./src/\` in \`imports\` is deprecated; use a subpath pattern like \`./src/*\` instead.

`;

exports[`invalid(8): {\"exports\": {\".\": [\"./dist/\", \"./other.js\"]}} 1`] = `

[Input]
  1 | {"exports": {".": ["./dist/", "./other.js"]}}

`;

exports[`invalid(8): {\"exports\": {\".\": [\"./dist/\", \"./other.js\"]}} 2`] = `

Message:
> 1 | {"exports": {".": ["./dist/", "./other.js"]}}
    |                    ^^^^^^^^^ Trailing-slash folder mapping \`./dist/\` in \`exports\` is deprecated; use a subpath pattern like \`./dist/*\` instead.

`;
